// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stripe /> renders 1`] = `
<div>
  <span
    class="sc-bcXHqe bRpDoB"
  />
</div>
`;

exports[`<Stripe /> renders with correct styles 1`] = `
<div>
  <span
    class="sc-bcXHqe hvvIXl"
  />
</div>
`;
